turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:12: error: value Lenght is not a member of Array[java.awt.Color]
if(n>colors.Lenght-2){
            ^